Task2/a.txt
In file included from src/main.cpp:2:
./inc/listiterator.hpp:136:23: error: no declaration matches ‘const ListIterator<T> ListIterator<T>::operator+(U) const’
  136 | const ListIterator<T> ListIterator<T>::operator+(U steps) const {
      |                       ^~~~~~~~~~~~~~~
In file included from ./inc/list.h:4,
                 from ./inc/listnode.hpp:4,
                 from src/main.cpp:1:
./inc/listiterator.h:58:25: note: candidates are: ‘template<class T> template<class U>  requires  IncrementableandComparable<U> ListIterator<T> ListIterator<T>::operator+(U) const’
   58 |         ListIterator<T> operator+(U steps) const;
      |                         ^~~~~~~~
./inc/listiterator.h:56:25: note:                 ‘template<class T> template<class U>  requires  IncrementableandComparable<U> ListIterator<T> ListIterator<T>::operator+(U)’
   56 |         ListIterator<T> operator+(U steps);
      |                         ^~~~~~~~
./inc/listiterator.h:14:7: note: ‘class ListIterator<T>’ defined here
   14 | class ListIterator
      |       ^~~~~~~~~~~~
make: *** [makefile:2: main.exe] Error 1
